Adjust body sizing to fix whitespace error

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif, Tahoma, Geneva, Verdana, sans-serif;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   padding: 0;
   margin: 0;
